--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "serverless portfolio",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "webpack": "webpack",
     "webpack-watch": "webpack --watch"
   },
@@ -24,8 +24,13 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.2.0",
+    "jest": "^21.2.1",
+    "react-test-renderer": "^16.2.0",
     "webpack": "^3.8.1"
   }
 }
