--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test-watch": "jest --watch",
     "webpack": "webpack",
     "webpack-watch": "webpack --watch"
   },
@@ -19,8 +20,8 @@
   },
   "homepage": "https://github.com/somabc/my-portfolio#readme",
   "dependencies": {
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -29,8 +30,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.2.0",
+    "enzyme-adapter-react-15": "^1.0.5",
     "jest": "^21.2.1",
-    "react-test-renderer": "^16.2.0",
+    "react-test-renderer": "^15.6.1",
     "webpack": "^3.8.1"
   }
 }
